--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ langchain-community
 faiss-cpu
 langchain-mistralai
 # rich
-langchain-groq
+# langchain-groq
 google-cloud-bigquery[pandas]
 aiofiles
 # tabulate
